Prevent overlapping of profile iframe and close button

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,6 +146,9 @@ h1, h2, h3, h4, h5, h6 {
 .profile-iframe {
     width: 100%;
     height: 100%;
+    padding-top: 3em;
+    padding-bottom: 0.5em;
+    padding-right: 0.25em;
     border-style: none;
 }
 
